speak_friend/static/css/speak_friend.css
body {
    background-color: #666666;
    padding: 0 20px;
}
#body-wrapper {
    max-width: 980px;
    background-color: #ffffff;
    border: 1px solid #000000;
    padding: 20px;
    margin: 20px auto;
}

/* navigation */
.navbar {
    margin-top: 20px;
}
.navbar,
.nav {
    width: 100%;
}
.subnav {
    margin-bottom: 20px;
}
.navbar .nav > li form {
    margin: 0;
}
.navbar .nav > li input {
    height: 39px;
    padding: 9px 10px 12px;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    border: none;
    background: transparent none;
    color: #ffffff;
    font-weight: bold;
}
#logout-form a {
    display: none;
}

#footer {
    max-width: 1020px;
    margin: 0 auto;
}

.headUsername {
    float: right;
    font-size: 15px;
    font-weight: bold;
    color: #666666;
}

/* forms */
label {
    font-weight: bold;
}
input,
textarea {
    width: 400px;
}
input[type="checkbox"] {
    margin-top: 0;
}
.form-horizontal .control-label {
    padding-top: 4px;
}
.btn {
    line-height: 16px;
}
.btn-small {
    padding: 4px 8px;
}
.btn-primary {
    color: #ffffff !important;
}
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input  {
    height: 30px;
    margin-bottom: 5px;
}
.form-actions {
    background-color: transparent;
    border: none;
    padding: 0;
}

.modal-header h1,
.modal-header h2 {
    margin: 0;
}
.modal-footer form,
.modal-footer .form-actions {
    margin: 0;
}

.accounts-created {
    margin-top: 25px;
}

/* user table */
.userList th {
    cursor: pointer;
}
.userList .super td {
    background-color: #f5f4db !important;
}
.userList .super .username {
    font-weight: bold;
}
.userList .disabled td {
    color: #888888;
}
.userList .disabled a {
    color: #6c7dc5;
}
.userActions {
    min-width: 115px;
}
label.required:after {
    content: " *";
    color: #ff0000;
}
.form-group.item-user_disabled label,
.form-group.item-user_disabled .checkbox,
.form-group.item-is_superuser label,
.form-group.item-is_superuser .checkbox,
.form-group.item-agree_to_policy label,
.form-group.item-agree_to_policy .checkbox,
.form-group.item-remember_me label,
.form-group.item-remember_me .checkbox {
    display: inline;
}
.form-group .checkbox input[type="checkbox"] {
    float: none;
}
.form-group.has-error .control-label,
.form-group.has-error .help-block,
.form-group.has-error .help-inline {
    color: #B94A48;
}
.form-group.has-error input,
.form-group.has-error select,
.form-group.has-error textarea {
    border-color: #B94A48;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
    color: #B94A48;
}
#profile-form #item-deformField8.error label,
#profile-form #item-deformField8.error .controls {
    display: inline;
}
#profile-form #item-deformField8.error .controls span {
    display: block;
    padding: 0;
}
#profile-form #req-deformField9 {
    display: none;
}
/* control panel */
.form-horizontal .form-group > input,
.form-horizontal .form-group .help-block,
.form-horizontal .form-group:last-child,
.form-horizontal .deformSeq {
    margin-left: 180px;
    display: block;
}
.deformSeqItem.row {
    margin-left: 0;
}
.deformSeq .panel-heading {
    display: none;
}
#overlay {
    display: none;
}

/* pagination */
.pager {
    list-style: none outside none;
    margin-bottom: 18px;
    margin-left: 0;
    text-align: center;
}
.pager:before, .pager:after {
    content: "";
    display: table;
}
.pager:after {
    clear: both;
}
.pager li {
    display: inline;
}
.pager a {
    background-color: #FFFFFF;
    border: 1px solid #DDDDDD;
    border-radius: 15px;
    display: inline-block;
    padding: 5px 14px;
}
.pager a:hover {
    background-color: #F5F5F5;
    text-decoration: none;
}
.pager .next a {
    float: right;
}
.pager .previous a {
    float: left;
}
.pager .disabled a, .pager .disabled a:hover {
    background-color: #FFFFFF;
    color: #999999;
    cursor: default;
}

